removing slug and generating event code
